--- a/src/components/IdentityCard/style.module.scss
+++ b/src/components/IdentityCard/style.module.scss
@@ -3,6 +3,19 @@
   height: 270px;
 }
 
+.previewLarge {
+  width: 100%;
+  filter: grayscale(1);
+}
+
+.previewSmall {
+  width: 100%;
+  max-width: 40px;
+  height: 50px;
+  border-radius: 2rem;
+  filter: grayscale(1);
+}
+
 .focusBox {
   border: 2px solid #2a4365;
   border-radius: 0.5rem;
