[dave] fix focus box animation and adjust box shadows

--- a/src/components/IdentityCard/style.module.scss
+++ b/src/components/IdentityCard/style.module.scss
@@ -1,43 +1,44 @@
-.nric {
+.identityCard {
+  position: sticky;
   width: 430px;
   height: 270px;
-}
 
-.previewLarge {
-  width: 100%;
-  filter: grayscale(1);
-}
-
-.previewSmall {
-  width: 100%;
-  max-width: 40px;
-  height: 50px;
-  border-radius: 2rem;
-  filter: grayscale(1);
-}
-
-.focusBox {
-  border: 2px solid #2a4365;
-  border-radius: 0.5rem;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.35s cubic-bezier(0.71, 0.03, 0.56, 0.85);
-  z-index: 1;
-
-  &.photo {
-    height: 12.5rem;
-    width: 7rem;
-    opacity: 1;
-    transform: translateX(0.2rem) translateY(3.8rem);
+  .previewLarge {
+    width: 100%;
+    filter: grayscale(1);
   }
 
-  &.name {
-    height: 5.5rem;
-    width: 19.25rem;
-    opacity: 1;
-    transform: translateX(7rem) translateY(4rem);
+  .previewSmall {
+    width: 100%;
+    max-width: 40px;
+    height: 50px;
+    border-radius: 2rem;
+    filter: grayscale(1);
+  }
+
+  .focusBox {
+    border: 2px solid #2a4365;
+    border-radius: 0.5rem;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.7s cubic-bezier(0.71, 0.03, 0.56, 0.85);
+    z-index: 1;
+
+    &.photo {
+      height: 12.5rem;
+      width: 7rem;
+      opacity: 1;
+      transform: translateX(0.2rem) translateY(3.8rem);
+    }
+
+    &.name {
+      height: 5.5rem;
+      width: 19.25rem;
+      opacity: 1;
+      transform: translateX(7rem) translateY(4rem);
+    }
   }
 }
