--- a/src/components/IdentityCard/style.module.scss
+++ b/src/components/IdentityCard/style.module.scss
@@ -1,19 +1,31 @@
 .identityCard {
   position: sticky;
   width: 430px;
-  height: 270px;
 
-  .previewLarge {
-    width: 100%;
-    filter: grayscale(1);
-  }
+  .card {
+    width: 430px;
+    min-height: 260px;
 
-  .previewSmall {
-    width: 100%;
-    max-width: 40px;
-    height: 50px;
-    border-radius: 2rem;
-    filter: grayscale(1);
+    &.front {
+      .previewLarge {
+        width: 100%;
+        filter: grayscale(1);
+      }
+
+      .previewSmall {
+        width: 100%;
+        max-width: 40px;
+        height: 50px;
+        filter: grayscale(1);
+      }
+    }
+
+    &.back {
+      //
+      .thumbprint {
+        max-width: 90px;
+      }
+    }
   }
 
   .focusBox {
@@ -31,14 +43,14 @@
       height: 12.5rem;
       width: 7rem;
       opacity: 1;
-      transform: translateX(0.2rem) translateY(3.8rem);
+      transform: translateX(0.5rem) translateY(2.5rem);
     }
 
     &.name {
       height: 5.5rem;
-      width: 19.25rem;
+      width: 19rem;
       opacity: 1;
-      transform: translateX(7rem) translateY(4rem);
+      transform: translateX(7.5rem) translateY(2.75rem);
     }
   }
 }
