[dave] add preview watermark and clean up styles

--- a/src/components/IdentityCardPreview/style.module.scss
+++ b/src/components/IdentityCardPreview/style.module.scss
@@ -2,19 +2,32 @@
   position: sticky;
   top: 40px;
   width: 430px;
+  margin-bottom: 2rem;
 
   .cardContainer {
     width: 430px;
     height: 260px;
     position: relative;
-    overflow: hidden;
 
     .card {
-      position: absolute;
-      width: 100%;
+      display: flex;
+      flex-direction: column;
+      background-color: #fed7e2;
+      border-radius: 0.5rem;
+      padding: 1rem;
       height: 100%;
+      width: 100%;
+      position: absolute;
       transition: all 0.8s cubic-bezier(0.71, 0.03, 0.56, 0.85);
       backface-visibility: hidden;
+
+      &::before {
+        content: "PREVIEW";
+        position: absolute;
+        transform: translateY(50px) rotateZ(-15deg);
+        font-size: 96px;
+        opacity: 0.1;
+      }
 
       &.front {
         transform: rotateY(0);
